--- a/Thesis_Latex/chrysalis-report.tex
+++ b/Thesis_Latex/chrysalis-report.tex
@@ -123,8 +123,13 @@
 \input{content/subchapter-improvements-persistence}
 \input{content/subchapter-improvements-hyperledger}
 \input{content/subchapter-improvements-ethereum-overhaul}
-	
+
+
+%subchapter summary of work	
 \input{content/chapter-open-issues} 
+
+%chapter CATERPILLAR
+
 \input{content/chapter-resources} 
 \input{content/chapter-conclusion} 
 \cleardoublepage
