--- a/Thesis_Latex/content/declaration.tex
+++ b/Thesis_Latex/content/declaration.tex
@@ -19,7 +19,29 @@ You can put your declaration here, to declare that you have completed your work 
 \begin{flushright}
 	\begin{minipage}{5cm}
 		\rule{\textwidth}{1pt}
-		\centering\thesisName
+		\centering Philipp Scholz
+	\end{minipage}
+\end{flushright}
+
+\bigskip
+\begin{spacing}{0.05}
+\noindent
+\rule{\linewidth}{0.5mm}
+\end{spacing}
+\bigskip
+
+You can put your declaration here, to declare that you have completed your work solely and only with the help of the references you mentioned.
+
+\bigskip
+
+\noindent\textit{\thesisUniversityCity, \thesisDate}
+
+\smallskip
+
+\begin{flushright}
+	\begin{minipage}{5cm}
+		\rule{\textwidth}{1pt}
+		\centering Anatoly Obukhov
 	\end{minipage}
 \end{flushright}
 
