--- a/Thesis_Latex/content/chapter-general-architecture.tex
+++ b/Thesis_Latex/content/chapter-general-architecture.tex
@@ -1,28 +1,11 @@
 % !TEX root = ../thesis-example.tex
 %
-\chapter{Related Work}
-\label{sec:related}
+\chapter{Initial Architecture}
+\label{sec:init}
 
 \cleanchapterquote{A picture is worth a thousand words. An interface is worth a thousand pictures.}{Ben Shneiderman}{(Professor for Computer Science)}
 
-\Blindtext[2][1]
 
-\section{Related Work Section 1}
-\label{sec:related:sec1}
+\section{Initial Architecture Section 1}
+\label{sec:init:sec1}
 
-\Blindtext[2][2]
-
-\section{Related Work Section 2}
-\label{sec:related:sec2}
-
-\Blindtext[3][2]
-
-\section{Related Work Section 3}
-\label{sec:related:sec3}
-
-\Blindtext[4][2]
-
-\section{Conclusion}
-\label{sec:related:conclusion}
-
-\Blindtext[2][1]
