--- a/Thesis_Latex/content/chapter-resources.tex
+++ b/Thesis_Latex/content/chapter-resources.tex
@@ -1,28 +1,11 @@
 % !TEX root = ../thesis-example.tex
 %
-\chapter{Concepts}
-\label{sec:concepts}
+\chapter{Resources}
+\label{sec:res}
 
 \cleanchapterquote{Users do not care about what is inside the box, as long as the box does what they need done.}{Jef Raskin}{about Human Computer Interfaces}
 
-\Blindtext[2][1]
+\section{Resources Section 1}
+\label{sec:res:sec1}
 
-\section{Concepts Section 1}
-\label{sec:concepts:sec1}
 
-\Blindtext[2][2]
-
-\section{Concepts Section 2}
-\label{sec:concepts:sec2}
-
-\Blindtext[3][2]
-
-\section{Concepts Section 3}
-\label{sec:concepts:sec3}
-
-\Blindtext[4][2]
-
-\section{Conclusion}
-\label{sec:concepts:conclusion}
-
-\Blindtext[2][1]
