Structure laid out, Cleanup, intro-overview

--- a/Thesis_Latex/chrysalis-report.tex
+++ b/Thesis_Latex/chrysalis-report.tex
@@ -24,21 +24,21 @@
 % **************************************************
 % Information and Commands for Reuse
 % **************************************************
-\newcommand{\thesisTitle}{Seminar}
+\newcommand{\thesisTitle}{Project Report}
 \newcommand{\thesisName}{Philipp Scholz, Anatoly Obukhov}
-\newcommand{\thesisSubject}{Titel / Topic}
-\newcommand{\thesisDate}{August 26, 2015}
-\newcommand{\thesisVersion}{Draft / Final}
+\newcommand{\thesisSubject}{Blockchain-based Process Execution with Chrysalis}
+\newcommand{\thesisDate}{August 6, 2021}
+\newcommand{\thesisVersion}{Final}
 
 \newcommand{\thesisFirstReviewer}{Prof. Dr.-Ing. Stefan Jablonski}
 \newcommand{\thesisFirstReviewerUniversity}{\protect{Universit{\"a}t Bayreuth}}
 \newcommand{\thesisFirstReviewerDepartment}{Fakult{\"a}t Mathematik, Physik, Informatik}
 
-\newcommand{\thesisSecondReviewer}{Dr. Stefan Sch{\"o}nig}
+\newcommand{\thesisSecondReviewer}{Dr. Lars Ackermann}
 \newcommand{\thesisSecondReviewerUniversity}{\protect{Universit{\"a}t Bayreuth}}
 \newcommand{\thesisSecondReviewerDepartment}{Fakult{\"a}t Mathematik, Physik, Informatik}
 
-\newcommand{\thesisFirstSupervisor}{Stefan Sch{\"o}nig}
+\newcommand{\thesisFirstSupervisor}{Christian Sturm}
 \newcommand{\thesisSecondSupervisor}{Lars Ackermann}
 
 \newcommand{\thesisUniversity}{\protect{Universit{\"a}t Bayreuth}}
@@ -123,12 +123,11 @@
 \input{content/subchapter-improvements-persistence}
 \input{content/subchapter-improvements-hyperledger}
 \input{content/subchapter-improvements-ethereum-overhaul}
-
-
-%subchapter summary of work	
+\input{content/subchapter-improvements-summary}
+	
 \input{content/chapter-open-issues} 
 
-%chapter CATERPILLAR
+\input{content/chapter-caterpillar}
 
 \input{content/chapter-resources} 
 \input{content/chapter-conclusion} 
