--- a/Thesis_Latex/content/chapter-general-architecture.tex
+++ b/Thesis_Latex/content/chapter-general-architecture.tex
@@ -1,11 +1,30 @@
 % !TEX root = ../thesis-example.tex
 %
-\chapter{Initial Architecture}
+\chapter{Architecture of Chrysalis}
 \label{sec:init}
 
-\cleanchapterquote{A picture is worth a thousand words. An interface is worth a thousand pictures.}{Ben Shneiderman}{(Professor for Computer Science)}
+TODO Chrysalis is Javascript + NodeJS + React
+
+\section{Intended Usage}
+\label{sec:init:usage}
+
+TODO Configuration, Deployment, Execution
+
+\section{Components and their Interactions}
+\label{sec:init:components}
 
 
-\section{Initial Architecture Section 1}
-\label{sec:init:sec1}
+\begin{figure}[h]
+	\centering
+	\captionsetup{justification=centering,margin=2cm}
+	\includegraphics[height=0.5\textwidth]{gfx/init-components-layers}
+	\caption{Layer structure of the original \emph{Chrysalis} System.}
+	\label{fig:init:components:layers}
+\end{figure}
+
+\section{Modeling of Processes}
+\label{sec:init:model}
+
+TODO Introduce Smart Contracts and Data as primary Blockchain Components
+TODO explain how Processes are represented with those.
 
