--- a/Thesis_Latex/content/chapter-improvements.tex
+++ b/Thesis_Latex/content/chapter-improvements.tex
@@ -1,8 +1,6 @@
 % !TEX root = ../thesis-example.tex
 %
-\chapter{System}
-\label{sec:system}
+\chapter{Improvements}
+\label{sec:impr}
 
-\cleanchapterquote{Innovation distinguishes between a leader and a follower.}{Steve Jobs}{(CEO Apple Inc.)}
 
-\Blindtext[2][1]
