--- a/Thesis_Latex/content/chapter-open-issues.tex
+++ b/Thesis_Latex/content/chapter-open-issues.tex
@@ -3,12 +3,11 @@
 \chapter{Open Issues}
 \label{sec:issues}
 
-\cleanchapterquote{Users do not care about what is inside the box, as long as the box does what they need done.}{Jef Raskin}{about Human Computer Interfaces}
 
-\Blindtext[2][1]
 
-\section{Open Issue Section 1}
-\label{sec:issues:sec1}
+\section{Integrating Hyperledger into Chrysalis}
+\label{sec:issues:intrgration}
 
-\Blindtext[2][2]
+\section{Improving on the Process Model}
+\label{sec:issues:bpm}
 
