--- a/Thesis_Latex/content/chapter-introduction.tex
+++ b/Thesis_Latex/content/chapter-introduction.tex
@@ -5,45 +5,33 @@
 
 \cleanchapterquote{You can’t do better design with a computer, but you can speed up your work enormously.}{Wim Crouwel}{(Graphic designer and typographer)}
 
-\Blindtext[2][2]
-
-\section{Postcards: My Address}
-\label{sec:intro:address}
-
-\textbf{Ricardo Langner} \\
-Alfred-Schrapel-Str. 7 \\
-01307 Dresden \\
-Germany
 
 
 \section{Motivation and Problem Statement}
 \label{sec:intro:motivation}
 
-\Blindtext[3][1] \cite{Jurgens:2000,Jurgens:1995,Miede:2011,Kohm:2011,Apple:keynote:2010,Apple:numbers:2010,Apple:pages:2010}
 
 \section{Results}
 \label{sec:intro:results}
 
-\Blindtext[1][2]
-
-\subsection{Some References}
-\label{sec:intro:results:refs}
-\cite{WEB:GNU:GPL:2010,WEB:Miede:2011}
 
 \section{Thesis Structure}
 \label{sec:intro:structure}
 
-\textbf{Chapter \ref{sec:related}} \\[0.2em]
-\blindtext
+\textbf{Chapter \ref{sec:init}} \\[0.2em]
+In the first content chapter, we will explain the way Chrysalis generally functions. Starting from an abstract and high-level view where the intended uses of the application are explained, we will the continue to detail the components that make up Chrysalis - what their role in the system is, how they interact with each other and with what external components they interface. At last, we will describe how business processes are modelled inside a blockchain node, so that our application may interact with them in a defined way.
 
 \textbf{Chapter \ref{sec:system}} \\[0.2em]
-\blindtext
+This chapter being the biggest of all, we intend to describe our programming work done here. This includes all improvements, additions and removals in the code. To do this, for every major task we will first describe its meaning and implications, then give a modeler's overview of the changes done. Where needed, we will give some technical insights to our work. Concluding every task as well as the entire chapter, we will summarize our results.
 
-\textbf{Chapter \ref{sec:concepts}} \\[0.2em]
-\blindtext
+\textbf{Chapter \ref{sec:issues}} \\[0.2em]
+Given that this project wasn't intended to be perfected once our work was done, and also given that some problems arose that hampered the quality of our results, this chapter will describe said issues. We will both clarify where they stem from and propose some ways of solving them, so those who will be handed this project may fix them with relative ease.
 
-\textbf{Chapter \ref{sec:concepts}} \\[0.2em]
-\blindtext
+\textbf{Chapter \ref{sec:caterpillar}} \\[0.2em]
+TODO
+
+\textbf{Chapter \ref{sec:res}} \\[0.2em]
+Due to the project having grown in complexity during our work on it, we decided to build a repository of design documents and other helpful files. In this short section, we intend to present these resources.
 
 \textbf{Chapter \ref{sec:conclusion}} \\[0.2em]
-\blindtext
+Finally, we will evaluate the success of our project and speak about the opportunities and limits it offers to those interested in deploying a decentralized process management engine.
