--- a/Thesis_Latex/content/subchapter-improvements-hyperledger.tex
+++ b/Thesis_Latex/content/subchapter-improvements-hyperledger.tex
@@ -1,14 +1,28 @@
 % !TEX root = ../thesis-example.tex
 %
-\section{hyperledger}
+\section{Hyperledger-based Application}
 \label{sec:impr:hl}
 
-\Blindtext[1][2]
+TODO Task: Build HL application for Chrysalis
 
-\begin{figure}[htb]
-	\includegraphics[width=\textwidth]{gfx/Clean-Thesis-Figure}
-	\caption{Figure example: \textit{(a)} example part one, \textit{(c)} example part two; \textit{(c)} example part three}
-	\label{fig:system:example1}
-\end{figure}
+\subsection{Hyperledger as a Ledger Protocol}
+\label{sec:impr:hl:basics}
 
-\Blindtext[1][2]
+\subsection{Required Components}
+\label{sec:impr:hl:requirements}
+
+\subsection{Test-Network}
+\label{sec:impr:hl:network}
+
+\subsection{Representation of Processes}
+\label{sec:impr:hl:datastructure}
+
+\subsection{Process Deployment and Execution}
+\label{sec:impr:hl:chaincode}
+
+\subsection{Integration into Chrysalis}
+\label{sec:impr:hl:integration}
+
+\subsection{Result}
+\label{sec:impr:hl:result}
+
