--- a/Thesis_Latex/content/subchapter-improvements-restructure.tex
+++ b/Thesis_Latex/content/subchapter-improvements-restructure.tex
@@ -1,14 +1,27 @@
 % !TEX root = ../thesis-example.tex
 %
-\section{restructure}
+\section{Restructuring the Code}
 \label{sec:impr:enzian}
 
-\Blindtext[1][2]
+TODO We'll focus on Enzian-Yellow here
 
-\begin{figure}[htb]
-	\includegraphics[width=\textwidth]{gfx/Clean-Thesis-Figure}
-	\caption{Figure example: \textit{(a)} example part one, \textit{(c)} example part two; \textit{(c)} example part three}
-	\label{fig:system:example1}
+\begin{figure}[h]
+	\centering
+	\captionsetup{justification=centering,margin=2cm}
+	\includegraphics[height=0.5\textwidth]{gfx/system-restructure-enzian-yellow-original}
+	\caption{Component structure of the original \emph{Enzian-Yellow} Repository. The components marked in orange are not part of Enzian-Yellow, but interact with it.}
+	\label{fig:impr:enzian:original}
 \end{figure}
 
-\Blindtext[1][2]
+TODO describe the general structure of the original Enzian-Yellow
+
+\subsection{Task Breakdown}
+
+\subsection{Improving the Dependency Hierarchy}
+
+\subsection{Interface for Expansions}
+
+\subsection{Transparency}
+
+\subsection{Minor Improvements}
+
