--- a/Thesis_Latex/content/chapter-open-issues.tex
+++ b/Thesis_Latex/content/chapter-open-issues.tex
@@ -3,11 +3,22 @@
 \chapter{Open Issues}
 \label{sec:issues}
 
+TODO this is far from done even if we succeeded at our tasks
 
+TODO this will be some hints what to do next 
 
 \section{Integrating Hyperledger into Chrysalis}
 \label{sec:issues:intrgration}
 
+TODO explain why chrysalis doesn't eat enzian-yellow any more
+
+TODO explain that deploying it is a bad idea anyway
+
+TODO Task: put ey into a container and make it a server
+
+TODO explain: good to have it close to the blockchain anyway, less networking issues
+
 \section{Improving on the Process Model}
 \label{sec:issues:bpm}
 
+TODO our work was very architectural, now that thats done it would be perfect time to expand functionality
