--- a/Thesis_Latex/content/chapter-resources.tex
+++ b/Thesis_Latex/content/chapter-resources.tex
@@ -3,9 +3,18 @@
 \chapter{Resources}
 \label{sec:res}
 
-\cleanchapterquote{Users do not care about what is inside the box, as long as the box does what they need done.}{Jef Raskin}{about Human Computer Interfaces}
 
-\section{Resources Section 1}
-\label{sec:res:sec1}
+
+\section{Configuration Files}
+\label{sec:res:configs}
+
+\section{Setup Guides}
+\label{sec:res:setup}
+
+\section{Useful Links}
+\label{sec:res:useful}
+
+\section{Other Documentation}
+\label{sec:res:other}
 
 
