--- a/Thesis_Latex/content/subchapter-improvements-hyperledger.tex
+++ b/Thesis_Latex/content/subchapter-improvements-hyperledger.tex
@@ -8,21 +8,35 @@ TODO Task: Build HL application for Chrysalis
 \subsection{Hyperledger as a Ledger Protocol}
 \label{sec:impr:hl:basics}
 
+TODO explain what hyperledger does generally and how it sets itself apart
+- validation by authority - no mining - abstraction layer
+
 \subsection{Required Components}
 \label{sec:impr:hl:requirements}
+
+TODO explain what new components will appear and how they weave into EY
 
 \subsection{Test-Network}
 \label{sec:impr:hl:network}
 
+TODO as in pres
+
 \subsection{Representation of Processes}
 \label{sec:impr:hl:datastructure}
+
+TODO as in pres
 
 \subsection{Process Deployment and Execution}
 \label{sec:impr:hl:chaincode}
 
+TODO as in pres
+
 \subsection{Integration into Chrysalis}
 \label{sec:impr:hl:integration}
+
+TODO explain API a bit, otherwise as in pres
 
 \subsection{Result}
 \label{sec:impr:hl:result}
 
+TODO mention issue
