--- a/Thesis_Latex/content/declaration.tex
+++ b/Thesis_Latex/content/declaration.tex
@@ -8,7 +8,11 @@
 \label{sec:declaration}
 \thispagestyle{empty}
 
-You can put your declaration here, to declare that you have completed your work solely and only with the help of the references you mentioned.
+Hiermit erklären wir, dass wir den vorliegenden Abschlussbericht selbständig verfasst
+und keine anderen als die angegebenen Hilfsmittel benutzt habe. Die Stellen des
+Abschlussberichtes, die anderen Quellen im Wortlaut oder dem Sinn nach entnommen
+wurden, sind durch Angaben der Herkunft kenntlich gemacht. Dies gilt auch für
+Zeichnungen, Skizzen, bildliche Darstellungen sowie für Quellen aus dem Internet.
 
 \bigskip
 
@@ -30,7 +34,7 @@ You can put your declaration here, to declare that you have completed your work 
 \end{spacing}
 \bigskip
 
-You can put your declaration here, to declare that you have completed your work solely and only with the help of the references you mentioned.
+TODO You can put your declaration here, to declare that you have completed your work solely and only with the help of the references you mentioned. Alternatively delete this and put your signature under the other declaration.
 
 \bigskip
 
