--- a/Thesis_Latex/content/chapter-introduction.tex
+++ b/Thesis_Latex/content/chapter-introduction.tex
@@ -7,9 +7,11 @@
 
 
 
-\section{Motivation and Problem Statement}
+\section{Business Processes on Blockchain}
 \label{sec:intro:motivation}
 
+\section{Problem Statement}
+\label{sec:intro:problem}
 
 \section{Results}
 \label{sec:intro:results}
@@ -19,7 +21,7 @@
 \label{sec:intro:structure}
 
 \textbf{Chapter \ref{sec:init}} \\[0.2em]
-In the first content chapter, we will explain the way Chrysalis generally functions. Starting from an abstract and high-level view where the intended uses of the application are explained, we will the continue to detail the components that make up Chrysalis - what their role in the system is, how they interact with each other and with what external components they interface. At last, we will describe how business processes are modelled inside a blockchain node, so that our application may interact with them in a defined way.
+In the first content chapter, we will explain the way Chrysalis generally functions. Starting from an abstract and high-level view where the intended uses of the application are explained, we will the continue to detail the components that make up Chrysalis - what their role in the system is, how they interact with each other and with what external components they interface. At last, we will describe how business processes are modeled inside a blockchain node, so that our application may interact with them in a defined way.
 
 \textbf{Chapter \ref{sec:system}} \\[0.2em]
 This chapter being the biggest of all, we intend to describe our programming work done here. This includes all improvements, additions and removals in the code. To do this, for every major task we will first describe its meaning and implications, then give a modeler's overview of the changes done. Where needed, we will give some technical insights to our work. Concluding every task as well as the entire chapter, we will summarize our results.
