--- a/Thesis_Latex/content/chapter-open-issues.tex
+++ b/Thesis_Latex/content/chapter-open-issues.tex
@@ -8,7 +8,7 @@ TODO this is far from done even if we succeeded at our tasks
 TODO this will be some hints what to do next 
 
 \section{Integrating Hyperledger into Chrysalis}
-\label{sec:issues:intrgration}
+\label{sec:issues:integration}
 
 TODO explain why chrysalis doesn't eat enzian-yellow any more
 
