--- a/Thesis_Latex/content/subchapter-improvements-persistence.tex
+++ b/Thesis_Latex/content/subchapter-improvements-persistence.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../thesis-example.tex
+% !TEX root = ../chrysalis-report.tex
 %
 \section{Persistence layer}
 \label{sec:impr:persistence}
