--- a/Thesis_Latex/chrysalis-report.tex
+++ b/Thesis_Latex/chrysalis-report.tex
@@ -66,6 +66,7 @@
 	bibfile=bib-refs,%
 	bibstyle=alphabetic,%
 ]{cleanthesis}
+\usepackage{listings}
 
 \hypersetup{					% setup the hyperref-package options
 	pdftitle={\thesisTitle},	% 	- title (PDF meta)
@@ -77,6 +78,19 @@
 	breaklinks=true,			% 	- allow line break inside links
 	bookmarksnumbered=true,		%
 	bookmarksopen=true			%
+}
+
+\lstdefinestyle{java}{
+	belowcaptionskip=1\baselineskip,
+	breaklines=true,
+	language=Java,
+	frame=single,
+	showstringspaces=false,
+	basicstyle=\footnotesize\ttfamily,
+	keywordstyle=\bfseries\color{green!40!black},
+	commentstyle=\itshape\color{purple!40!black},
+	identifierstyle=\color{blue},
+	stringstyle=\color{orange},
 }
 
 % **************************************************
